--- a/cards/src/main/resources/application_prod.yml
+++ b/cards/src/main/resources/application_prod.yml
@@ -2,3 +2,12 @@ spring:
   config:
     activate:
       on-profile: "prod"
+
+cards:
+  message: "Welcome to EazyBank cards related prod APIs "
+  contactDetails:
+    name: "Sandra Harald - Product Owner"
+    email: "sandra@eazybank.com"
+  onCallSupport:
+    - (617) 432-2356
+    - (936) 564-8721
