--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
       - "application_prod.yml"
       - "application_qa.yml"
   profiles:
-    active:
+    active: "qa"
 
 build:
   version: "3.0"
