--- a/cards/src/main/resources/application.yml
+++ b/cards/src/main/resources/application.yml
@@ -18,9 +18,8 @@ spring:
     import:
       - "application_qa.yml"
       - "application_prod.yml"
-    profiles:
-      active:
-        - "qa"
+  profiles:
+    active: "qa"
 
 build:
   version: "3.0"
